@@ -5,6 +5,7 @@ option(mpi "use MPI library" off)
 option(openmp "use OpenMP" off)
 option(zlib "build ZLIB" on)
 option(BUILD_TESTING "build libsc self-tests" on)
+option(TEST_WITH_VALGRIND "run self-tests with valgrind" OFF)
 option(BUILD_SHARED_LIBS "build shared libsc")
 
 # --- default install directory under build/local
