@@ -1,0 +1,1 @@
+I hereby place my contributions to libsc under the FreeBSD license.  Kyle Williams.
